Corrected alignment of footer

--- a/src/styles.css
+++ b/src/styles.css
@@ -22,6 +22,10 @@ h1 {
 h2 {
   font-size: 20px;
 }
+footer {
+  text-align: left;
+}
+
 .col-md-2 {
   width: 100px;
   margin: 0 auto;
